force-app/main/default/objects/Asset/fields/StudyYear__c.field-meta.xml
<CustomField>
    <fullName>StudyYear__c</fullName>
    <label>Study Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>