force-app/main/default/objects/Asset/fields/Studyyears__c.field-meta.xml
<CustomField>
    <fullName>Studyyears__c</fullName>
    <label>Studyyears</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>