force-app/main/default/objects/Asset/fields/SubFund__c.field-meta.xml
<CustomField>
    <fullName>SubFund__c</fullName>
    <label>Sub Fund</label>
    <length>255</length>
    <type>Text</type>
</CustomField>