force-app/main/default/objects/Asset/fields/SubjectCode__c.field-meta.xml
<CustomField>
    <fullName>SubjectCode__c</fullName>
    <label>Subject Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>