force-app/main/default/objects/Asset/fields/SubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionId__c</fullName>
    <displayFormat>{000000000}</displayFormat>
    <label>Subscription Id</label>
    <type>AutoNumber</type>
</CustomField>