force-app/main/default/objects/Asset/fields/SubscriptionIdNumber__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionIdNumber__c</fullName>
    <displayFormat>{000000000}</displayFormat>
    <label>Subscription Id Number</label>
    <type>AutoNumber</type>
</CustomField>