force-app/main/default/objects/Asset/fields/SubtypeOfEducation__c.field-meta.xml
<CustomField>
    <fullName>SubtypeOfEducation__c</fullName>
    <label>Subtype of Education</label>
    <length>255</length>
    <type>Text</type>
</CustomField>