force-app/main/default/objects/Asset/fields/SwitchProbability__c.field-meta.xml
<CustomField>
    <fullName>SwitchProbability__c</fullName>
    <label>Switch Probability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>