force-app/main/default/objects/Asset/fields/TEMP_NEXT_CALC__c.field-meta.xml
<CustomField>
    <fullName>TEMP_NEXT_CALC__c</fullName>
    <label>TEMP_NEXT_CALC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>