force-app/main/default/objects/Asset/fields/TEMP_NEXT_CALC_PERIOD_TYPE__c.field-meta.xml
<CustomField>
    <fullName>TEMP_NEXT_CALC_PERIOD_TYPE__c</fullName>
    <label>TEMP_ NEXT_CALC_PERIOD_TYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>