force-app/main/default/objects/Asset/fields/TEMPDuplicateAccount__c.field-meta.xml
<CustomField>
    <fullName>TEMPDuplicateAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TEMP Duplicate Account</label>
    <type>Checkbox</type>
</CustomField>