force-app/main/default/objects/Asset/fields/TEMPDuplicateBillToAccount__c.field-meta.xml
<CustomField>
    <fullName>TEMPDuplicateBillToAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TEMP Duplicate Bill To Account</label>
    <type>Checkbox</type>
</CustomField>