force-app/main/default/objects/Asset/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>