force-app/main/default/objects/Asset/fields/TermsEnddate__c.field-meta.xml
<CustomField>
    <fullName>TermsEnddate__c</fullName>
    <formula>ADDMONTHS(ActivationDate__c,Terms__c )-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terms End date</label>
    <type>Date</type>
</CustomField>