force-app/main/default/objects/Asset/fields/Topschool__c.field-meta.xml
<CustomField>
    <fullName>Topschool__c</fullName>
    <label>Topschool</label>
    <length>255</length>
    <type>Text</type>
</CustomField>