force-app/main/default/objects/Asset/fields/Year2__c.field-meta.xml
<CustomField>
    <fullName>Year2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Year 2</label>
    <type>Checkbox</type>
</CustomField>