force-app/main/default/objects/Asset/fields/YearsInUse__c.field-meta.xml
<CustomField>
    <fullName>YearsInUse__c</fullName>
    <label>Years In Use</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>