force-app/main/default/objects/Asset/recordTypes/Booklist.recordType-meta.xml
<RecordType>
    <fullName>Booklist</fullName>
    <active>true</active>
    <description>Recordtype for recording Booklists as assets</description>
    <label>Booklist</label>
</RecordType>