force-app/main/default/objects/Asset/recordTypes/BooklistMethod.recordType-meta.xml
<RecordType>
    <fullName>BooklistMethod</fullName>
    <active>true</active>
    <label>Booklist Method</label>
</RecordType>