force-app/main/default/objects/Asset/recordTypes/BuildingBlock.recordType-meta.xml
<RecordType>
    <fullName>BuildingBlock</fullName>
    <active>true</active>
    <description>Recordtype for recording Building Blocks as assets</description>
    <label>Building Block</label>
</RecordType>