force-app/main/default/objects/Asset/validationRules/CancellationDateNeedsAReason.validationRule-meta.xml
<ValidationRule>
    <fullName>CancellationDateNeedsAReason</fullName>
    <active>true</active>
    <description>When cancellation date is filled, a reason has to be set.</description>
    <errorConditionFormula>AND(
	NOT(
					ISBLANK(CancellationDate__c)), 
					ISBLANK(TEXT(CancellationReason__c)) )</errorConditionFormula>
    <errorDisplayField>CancellationReason__c</errorDisplayField>
    <errorMessage>A cancellation date is set, please enter a cancellation reason.</errorMessage>
</ValidationRule>