force-app/main/default/objects/Asset/validationRules/IfCancelledCannotSetToActive.validationRule-meta.xml
<ValidationRule>
    <fullName>IfCancelledCannotSetToActive</fullName>
    <active>true</active>
    <description>IF Cancellation Date =&lt; Today you cannot set the Asset to active</description>
    <errorConditionFormula>AND(
				IsActive__c  = true,
				NOT(ISBLANK(CancellationDate__c)),
				IF(CancellationDate__c &gt; TODAY(), false, true)
				)</errorConditionFormula>
    <errorDisplayField>IsActive__c</errorDisplayField>
    <errorMessage>You cannot set an Asset with a cancellation date in the past.</errorMessage>
</ValidationRule>