force-app/main/default/objects/Asset/validationRules/NoNameChangePlantyn.validationRule-meta.xml
<ValidationRule>
    <fullName>NoNameChangePlantyn</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(OperatingCompany__c,&apos;Plantyn&apos;) &amp;&amp; 
ISCHANGED(Name) &amp;&amp;
(RecordTypeName__c = &apos;Booklist Method&apos; || RecordTypeName__c = &apos;Booklist&apos;) &amp;&amp; 
NOT( $Profile.Name = &apos;System Administrator&apos; ||  $User.Alias = &apos;mvan&apos; ||  $User.Alias = &apos;klero&apos;)</errorConditionFormula>
    <errorMessage>You are not allowed to change the name of Booklists</errorMessage>
</ValidationRule>