force-app/main/default/objects/Asset/validationRules/OtherCancellationReason.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherCancellationReason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OtherCancellationReason__c = null,
				 ISPICKVAL(CancellationReason__c, &apos;Other, specify below&apos;))</errorConditionFormula>
    <errorDisplayField>OtherCancellationReason__c</errorDisplayField>
    <errorMessage>Please fill in the cancellation reason</errorMessage>
</ValidationRule>