force-app/main/default/objects/Asset/listViews/All_Active_Assets_NH_Professional.listView-meta.xml
<ListView>
    <fullName>All_Active_Assets_NH_Professional</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.QUANTITY</columns>
    <columns>ASSET.PRICE</columns>
    <columns>ActivationDate__c</columns>
    <columns>RenewalDate__c</columns>
    <columns>RenewalRunDate__c</columns>
    <columns>Contract__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PriceBook__c</field>
        <operation>contains</operation>
        <value>Professional</value>
    </filters>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Assets NH Professional</label>
    <sharedTo>
        <group>AllUsersNoordhoffProfessional</group>
    </sharedTo>
</ListView>