force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>BillToAccount__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>RenewalDate__c</columns>
    <columns>AutomatedRenewProcess__c</columns>
    <columns>CancelationDate__c</columns>
    <columns>ASSET.QUANTITY</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>ASSET.LAST_UPDATE</columns>
    <columns>ISBN__c</columns>
    <columns>Title__c</columns>
    <columns>Value__c</columns>
    <columns>ASSET.PRICE</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OperatingCompany__c</field>
        <operation>equals</operation>
        <value>Noordhoff</value>
    </filters>
    <label>All Assets</label>
</ListView>