force-app/main/default/objects/Asset/listViews/Recent_Renewal_Assets_NH_Professional.listView-meta.xml
<ListView>
    <fullName>Recent_Renewal_Assets_NH_Professional</fullName>
    <booleanFilter>(1 AND 2) AND (3 OR 4)</booleanFilter>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.QUANTITY</columns>
    <columns>ASSET.PRICE</columns>
    <columns>ActivationDate__c</columns>
    <columns>RenewalDate__c</columns>
    <columns>RenewalRunDate__c</columns>
    <columns>Contract__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PriceBook__c</field>
        <operation>contains</operation>
        <value>Professional</value>
    </filters>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RenewalDate__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>RenewalDate__c</field>
        <operation>equals</operation>
        <value>NEXT_MONTH</value>
    </filters>
    <label>Recent Renewal Assets NH Professional</label>
    <sharedTo>
        <group>AllUsersNoordhoffZorg</group>
    </sharedTo>
</ListView>