force-app/main/default/objects/Asset/listViews/Test_List_View.listView-meta.xml
<ListView>
    <fullName>Test_List_View</fullName>
    <columns>ASSET.NAME</columns>
    <columns>BooklistName__c</columns>
    <columns>SchoolYear__c</columns>
    <columns>RenewalDate__c</columns>
    <columns>Booklist__c</columns>
    <columns>Subtype__c</columns>
    <columns>RenewalMessage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PriceBook__c</field>
        <operation>contains</operation>
        <value>Zorg</value>
    </filters>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RenewalDate__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Test List View</label>
    <sharedTo>
        <group>PlantynEditRecords</group>
    </sharedTo>
</ListView>