force-app/main/default/objects/Asset/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>BillToAccount__c</field>
        <operation>contains</operation>
        <value>MBOWebshop</value>
    </filters>
    <label>Today</label>
</ListView>